add body of html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Maythán Fotografía</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
-    
+    <header class="hero">
+        <img src="./images/header.jpg" alt="hero">
+        <div class="hero-title">
+            <p>Mayhtán Fotografía</p>
+            <p>Jairo Hernández</p>
+        </div>
+    </header>
+    <main>
+        <section class="work-results">
+            <h1>- Mi Trabajo -</h1>
+            <div class="work-container">
+                <div class="work-item">
+                    <img src="./images/contenido-1.jpg" alt="">
+                    <p>Retratos</p>
+                    <p>-></p>
+                </div>
+                <div class="work-item">
+                    <img src="./images/contenido-2.jpg" alt="">
+                    <p>Familia</p>
+                    <p>-></p>
+                </div>
+                <div class="work-item">
+                    <img src="./images/contenido-3.jpg" alt="">
+                    <p>Parejas</p>
+                    <p>-></p>
+                </div>
+            </div>
+        </section>
+        <section class="comments-container">
+            <div class="input-comment">
+                <h3>Agregar comentario</h3>
+                <form action=""></form>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <img src="./images/footer.jpg" alt="hero">
+        <div class="footer-title">
+            <p>Contáctame</p>
+        </div>
+    </footer>
 </body>
 </html>
