Add hero in header page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="hero">
         <img src="./images/header.jpg" alt="hero">
         <div class="hero-title">
-            <p>Mayhtán Fotografía</p>
+            <p class="hero-title-boss">MaytánB Fotografía</p>
             <p>Jairo Hernández</p>
         </div>
     </header>
