Add style for my work section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section class="work-results">
-            <h1>- Mi Trabajo -</h1>
+            <h1>Mi Trabajo</h1>
             <div class="work-container">
                 <div class="work-item">
                     <img src="./images/contenido-1.jpg" alt="">
@@ -43,7 +43,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <img src="./images/footer.jpg" alt="hero">
         <div class="footer-title">
             <p>Contáctame</p>
