--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maythán Fotografía</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/app.css">
+    <script src="https://kit.fontawesome.com/e582a610be.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="hero">
@@ -16,27 +17,33 @@
         </div>
     </header>
     <main>
-        <section class="work-results">
+        <section class="work-results container">
             <h1>Mi Trabajo</h1>
             <div class="work-container">
                 <div class="work-item">
                     <img src="./images/contenido-1.jpg" alt="">
-                    <p>Retratos</p>
-                    <p>-></p>
+                    <div>
+                        <p>Retratos</p>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
                 </div>
                 <div class="work-item">
                     <img src="./images/contenido-2.jpg" alt="">
-                    <p>Familia</p>
-                    <p>-></p>
+                    <div>
+                        <p>Familia</p>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
                 </div>
                 <div class="work-item">
                     <img src="./images/contenido-3.jpg" alt="">
-                    <p>Parejas</p>
-                    <p>-></p>
+                    <div>
+                        <p>Parejas</p>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="comments-container">
+        <section class="comments-container container">
             <div class="input-comment">
                 <h3>Agregar comentario</h3>
                 <form action=""></form>
