update styles colors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="work-results container">
-            <h1>Mi Trabajo</h1>
+            <h1 class="title">Mi Trabajo</h1>
             <div class="work-container">
                 <div class="work-item">
                     <img src="./images/contenido-1.jpg" alt="">
@@ -44,18 +44,13 @@
             </div>
         </section>
         <section class="comments-container container">
+            <h1 class="title">Comentarios</h1>
             <form id="formulario" class="input-comment">
-                <label for="comment">Comentarios</label>
-                <textarea id="comment"></textarea>
-                <input type="submit" value="Enviar">
+                <textarea id="comment" class="comment-textarea"></textarea>
+                <input type="submit" value="Agregar comentario">
             </form>
             <div class="comment-list" id="comment-list">
-                <ul>
-                    <li>
-                        <!--Hola, soy un comentario
-                        <<i class="fa-solid fa-trash"></i>-->
-                    </li>
-                </ul>
+                <ul></ul>
             </div>
         </section>
     </main>
