add responsive design by mobile first

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
     </header>
     <main>
-        <section class="work-results container">
+        <section class="work-results">
             <h1 class="title">Mi Trabajo</h1>
-            <div class="work-container">
+            <div class="work-container container">
                 <div class="work-item">
                     <img src="./images/contenido-1.jpg" alt="">
                     <div>
@@ -40,6 +40,46 @@
                         <p>Parejas</p>
                         <i class="fa-solid fa-arrow-right"></i>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <h1 class="title">Paquetes</h1>
+            <div class="service-packages-container container">
+                <div class="service-package-item">
+                    <h2>Paquete 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
+                    <ul>
+                        <li> Lorem ipsum dolor sit amet.</li>
+                        <li> Lorem ipsum dolor sit amet.</li>
+                        <li> Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <p class="price">$1000</p>
+                    <a href="#">Seleccionar</a>
+                </div>
+
+                <div class="service-package-item">
+                    <h2>Paquete 2</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
+                    <ul>
+                        <li> Lorem ipsum dolor sit amet.</li>
+                        <li> Lorem ipsum dolor sit amet.</li>
+                        <li> Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <p class="price">$1000</p>
+                    <a href="#">Seleccionar</a>
+                </div>
+
+                <div class="service-package-item">
+                    <h2>Paquete 3</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
+                    <ul>
+                        <li> Lorem ipsum dolor sit amet.</li>
+                        <li> Lorem ipsum dolor sit amet.</li>
+                        <li> Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <p class="price">$1000</p>
+                    <a href="#">Seleccionar</a>
                 </div>
             </div>
         </section>
